[tool.poetry]
name = "hashplot"
version = "0.1.0"
description = "Plot hash functions distributions"
authors = ["febits <febits@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
